core/errors/src/main/java/com/example/errors/SmtWentWrongException.kt
package com.example.errors

class SmtWentWrongException : BaseNetworkException()
